# neuralnetwork

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  matrix.rs  neuralnetwork.rs  xorshift.rs
